Upadte dark theme && deps

--- a/app/globals.css
+++ b/app/globals.css
@@ -73,6 +73,21 @@ code:not(pre code) span {
   color: black !important;
 }
 
+@media (prefers-color-scheme: dark) {
+  code {
+    font-family: 'Menlo', 'Monaco', 'Courier New', monospace;
+    font-size: 14px;
+    padding: 0.2em 0.4em;
+    border-radius: 0.3em;
+    background-color: var(--color-zinc-800);
+  }
+
+  code:not(pre code) span {
+    color: var(--color-zinc-100) !important;
+  }
+}
+
+
 pre code span {
   font-weight: 500;
 }
@@ -97,14 +112,14 @@ table {
 }
 
 .transition-element {
-  view-transition-name: lee;
+  view-transition-name: Dinesh;
 }
 
-::view-transition-old(lee) {
+::view-transition-old(Dinesh) {
   animation: fade-out 0.8s ease-in-out;
 }
 
-::view-transition-new(lee) {
+::view-transition-new(Dinesh) {
   animation: fade-in-up 0.4s ease-in-out;
 }
 
