--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 @import 'tailwindcss';
-@theme {
+
+:root {
   --font-family-sans: 'Inter', sans-serif;
 }
 
@@ -86,7 +87,6 @@ code:not(pre code) span {
     color: var(--color-zinc-100) !important;
   }
 }
-
 
 pre code span {
   font-weight: 500;
